Generalized html root location.

--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
-<?php include("/var/www/dev-west/.md-html/header.html"); ?>
+<?php include("/var/www/html/md-html/header.html"); ?>
 
 {content}
 
-<?php include("/var/www/dev-west/.md-html/footer.html"); ?>
+<?php include("/var/www/html/md-html/footer.html"); ?>
