--- a/md-html/header.html
+++ b/md-html/header.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
-<!-- See github.com/dev-west for license-->
+<!-- See github.com/dev-west for license -->
 <html>
   <head>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>&lt;/&gt;</title>
     <style>
-<?php include("md-html/style.css"); ?>
+<?php include("/var/www/html/.md-html/style.css"); ?>
     </style>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Raleway&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Raleway&family=Noto+Sans&display=swap" rel="stylesheet">
 
-    <title>de</title>
   </head>
 <body>
-  <div class="page">
-    <div id="divTop" class="fBtn" onclick="toTop()">to top ^</div>
-    <div id="locTitle" class="header"></div>
-    <div class="row">
-      <div id="nav" class="leftcolumn">
-        <div id="navMain" class="card" style="text-align:center">
-          <a href="#" onclick="hisBack()">&lt;&lt;</a> |
-          <a href="/">^ Home</a> |
-          <a href="#" onclick="hisFore()">&gt;&gt;</a>
-        </div>
-        <div id="toc" class="card"></div>
-      </div>
-      <div id="cont" class="rightcolumn">
+
+<div class="page">
+  <div id="divTop" class="fBtn" onclick="toTop()">to top ^</div>
+
+  <div>
+    <div class="header">west &#x00b7; dev</div>
+    <div class="navbar">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/md/challenges.html">Challenges</a></li>
+        <li><a href="/md/glossary.html">Glossary</a><li>
+        <li><a href="/md/mscse.html">MSCSE</a></li>
+        <li><a href="/md/projects.html">Projects</a></li>
+        <li><a href="/md/resources.html">Resources</a></li>
+        <li><a href="/md/theory.html">Theory</a></li>
+        <li><a href="/md/tools.html">Tools</a></li>
+        <li><a href="/md/vulnerabilities.html">Vulnerabilities</a></li>
+        <li><a href="/md/about-me.html">About Me</a><li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <div id="nav" class="rightcolumn">
+      <div id="toc" class="card"></div>
+    </div>
+    <div id="cont" class="leftcolumn">
+      <div class="card">
